Bug 509269 - temporary double border near line numbers after auto reload
Summary: temporary double border near line numbers after auto reload
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: part (other bugs)
Version First Reported In: Git
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-08 11:33 UTC by alanas.00
Modified: 2025-09-13 18:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kwrite_double_border.webp (116.93 KB, image/webp)
2025-09-08 11:33 UTC, alanas.00
Details

Note You need to log in before you can comment on or make changes to this bug.
Description alanas.00 2025-09-08 11:33:14 UTC
Created attachment 184805 [details]
kwrite_double_border.webp

SUMMARY
extra border disappears when kwrite window is redrawn (like when you focus or resize kwrite window)

STEPS TO REPRODUCE
1. open kwrite
2. press ctrl+shift+, (this should open "Configure — KWrite" window)
3. click "Open/Save"
4. click "Advanced" tab
5. turn on "Auto reload files on external changes"
6. click "OK" button
7. run `seq 8 > /tmp/a.txt`
8. open /tmp/a.txt file in kwrite
9. run `echo appended line >> /tmp/a.txt`

OBSERVED RESULT
double border near line numbers (see kwrite_double_border.webp)

EXPECTED RESULT
same as if you force kwrite window to redraw (focus or resize kwrite window)

SOFTWARE/OS VERSIONS
libKF6TextEditor.so.6: https://invent.kde.org/frameworks/ktexteditor/-/commit/469486ae78da493e4cdb54f35efbd3108c07d03b
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.2
Kernel Version: 6.14.0-29-generic (64-bit)
Graphics Platform: Wayland
Comment 1 Christoph Cullmann 2025-09-13 18:25:37 UTC
Git commit 5ce7708af2121eda9568e0382ec9b9a902382d10 by Christoph Cullmann.
Committed on 13/09/2025 at 18:25.
Pushed by cullmann into branch 'master'.

still trigger delayed update, else we miss some resizing and get artifacts

STEPS TO REPRODUCE
1. open kwrite
2. press ctrl+shift+, (this should open "Configure — KWrite" window)
3. click "Open/Save"
4. click "Advanced" tab
5. turn on "Auto reload files on external changes"
6. click "OK" button
7. run `seq 8 > /tmp/a.txt`
8. open /tmp/a.txt file in kwrite
9. run `echo appended line >> /tmp/a.txt`

M  +4    -0    src/view/kateviewhelpers.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/5ce7708af2121eda9568e0382ec9b9a902382d10