still trigger delayed update, else we miss some resizing and get artifacts

STEPS TO REPRODUCE
1. open kwrite
2. press ctrl+shift+, (this should open "Configure — KWrite" window)
3. click "Open/Save"
4. click "Advanced" tab
5. turn on "Auto reload files on external changes"
6. click "OK" button
7. run `seq 8 > /tmp/a.txt`
8. open /tmp/a.txt file in kwrite
9. run `echo appended line >> /tmp/a.txt`

BUG: 509269